cycel.yml updated

--- a/.github/workflows/cycle.yml
+++ b/.github/workflows/cycle.yml
@@ -23,14 +23,19 @@ jobs:
         with:
           dotnet-version: 5.0.101
       - name: Restore
-        run: dotnet restore .\src
+        run: dotnet restore src
       - name: Build
-        run: dotnet build .\src
+        run: dotnet build src
       - name: Archive Bot artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: exe
-          path: src\bin\Debug\net5.0
+          name: OnigiriBot
+          path: src\OnigiriBot\bin\Debug\net5.0
+      - name: Archive Automation artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: OnigiriAutomation
+          path: src\OnigiriAutomation\bin\Debug\netcoreapp3.1
       - name: RunClient
         timeout-minutes: 4320
         env:
@@ -44,4 +49,4 @@ jobs:
           OnigiriBotToken: ${{ secrets.OnigiriBotToken }}
           OnigiriProxy: ${{ secrets.OnigiriProxy }}
           OnigiriLogo: ${{ secrets.OnigiriLogo }}
-        run: .\src\bin\Debug\net5.0\OnigiriBot.exe
+        run: src\OnigiriBot\bin\Debug\net5.0\OnigiriBot.exe
